import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

import java.nio.file.Files
import java.nio.file.Paths

buildscript {
    repositories {
        maven { url "https://plugins.gradle.org/m2/" }
        mavenCentral()
    }
    dependencies {
        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:5.2.2'
    }
}

//this task is used to update the gradle wrapper properties to a new version
// it also ensures that wrapper scripts and gradle-wrapper.jar are updates if necessary
wrapper {
    gradleVersion = '8.8'
}

//Global Properties
ext {
    logger.lifecycle('reading build properties file...')
    props = new Properties()
    file("${projectDir}/chemistry_base/src/main/resources/sirius.build.properties").withReader("UTF8", {
        props.load(it)
    })
    file("${projectDir}/fingerid_base_oss/src/main/resources/csi_fingerid.build.properties").withReader("UTF8", {
        props.load(it)
    })

    siriusVersion = props.getProperty('de.unijena.bioinf.sirius.version')
    fingeridVersion = props.getProperty('de.unijena.bioinf.fingerid.version')
    //version for external libraries
    picocli_version = '4.7.5'
    jakarta_version = '3.1.0'
    jjobs_version = '0.9.36-SNAPSHOT' //todo nightsky ->  stable jjobs release
    slf4j_version = '1.7.36'
    jackson_version = '2.16.1'
    math3_version = '3.6.1'
    cbc_version = props.getProperty('de.unijena.bioinf.sirius.build.cbc_version')
    glpk_version = props.getProperty('de.unijena.bioinf.sirius.build.glpk_version')
    gurobi_version = props.getProperty('de.unijena.bioinf.sirius.build.gurobi_version')
    cplex_version = props.getProperty('de.unijena.bioinf.sirius.build.cplex_version')
    cdk_version = "2.9"
    jetbrains_version = "24.1.0"
    okhttp_version = "4.12.0"
    fastutil_version = '8.5.12' //replaces trove

    jewelcli_version = '0.8.9'
    //todo wenn wir die inhouse clis auch ind das frontend moven haben wir keinerlei distribution zeug mehr in sirius

    commons_email_version = '1.5'
    oshi_version = '6.1.5'
    json_version = '1.0'
    json_impl_version = "1.0.4"
    psql_version = "42.2.1"
    jdbi_version = '3.34.0'

    liblinear_version = "1.95"
    libsvm_version = "3.20"

    guava_version = '31.1-jre'

    swagger_version = "2.2.18"

    jaxb_version = "2.3.9"

    siriusTargetPlatform = SiriusPlatform.fromDescriptor((
            project.findProperty('build.sirius.platform') ?:
                    "${DefaultNativePlatform.getCurrentOperatingSystem().getName()}-${DefaultNativePlatform.getCurrentArchitecture().getName()}"
    ) as String)
}

allprojects {
    apply plugin: 'com.jfrog.artifactory'
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    targetCompatibility = 21

    compileJava.options.encoding = "UTF-8"
    compileTestJava.options.encoding = "UTF-8"
    javadoc.options.encoding = 'UTF-8'

    version = project.siriusVersion
    group = 'de.unijena.bioinf.ms'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url "https://bio.informatik.uni-jena.de/repository/libs-oss"
        }
        maven {
            url "https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/" //mzml parser
        }
        maven {
            url "http://eulergui.sourceforge.net/maven2/" //FTAlign stuff
            allowInsecureProtocol = true
        }
        maven {
            // only used for spectral hashs (Splash)
            url "http://gose.fiehnlab.ucdavis.edu:55000/content/groups/public"
            allowInsecureProtocol = true
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.34'
        annotationProcessor 'org.projectlombok:lombok:1.18.34'

        api "org.jetbrains:annotations:$jetbrains_version"
        api "it.unimi.dsi:fastutil:$fastutil_version"

//        api 'org.apache.commons:commons-collections4:4.4'
        //try to remove and replace with basic java or fastutil
        api group: 'com.google.guava', name: 'guava', version: '31.1-jre'
        api "org.apache.commons:commons-math3:$math3_version"
        api 'org.apache.commons:commons-compress:1.21'
        api 'org.apache.commons:commons-lang3:3.12.0'
        api 'commons-io:commons-io:2.11.0' //maybe provide via io package?

        api 'io.swagger.core.v3:swagger-annotations:2.2.20'

        api "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
        api "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"

        api 'com.googlecode.concurrent-locks:concurrent-locks:1.0.0'

        api group: 'de.unijena.bioinf', name: 'jjobs-core', version: "$jjobs_version"
        api group: 'org.slf4j', name: 'slf4j-api', version: "$slf4j_version"

        testImplementation group: 'org.slf4j', name: 'slf4j-jdk14', version: "$slf4j_version"
        testImplementation group: 'de.unijena.bioinf', name: 'jjobs-swing', version: "$jjobs_version"
        // Aggregator dependency that also brings JUnit 5 parameterized tests etc.
        testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
        testImplementation("org.junit.jupiter:junit-jupiter-params:5.10.0")
        // The Vintage engine is needed to be able to run JUnit 4 tests
        testImplementation("org.junit.vintage:junit-vintage-engine:5.10.0")
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
        testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.6.0'
    }

    test {
        useJUnitPlatform()
        maxHeapSize = "16G"
    }

    artifactory {
        contextUrl = 'https://bio.informatik.uni-jena.de/repository/'
        publish {
            repository {
                if (version.toString().endsWith('-SNAPSHOT'))
                    repoKey = 'libs-snapshot-local'
                else
                    repoKey = 'libs-release-local'

                username = project.findProperty('de.unijena.bioinf.build.artifactory.username')
                password = project.findProperty('de.unijena.bioinf.build.artifactory.password')
            }
            defaults {
                publications('mavenJava')
            }
        }
    }
}

subprojects {
    java {
        withJavadocJar()
        withSourcesJar()
    }
    //do not build javadoc for snapshot version to reduce build time
    components.java.withVariantsFromConfiguration(configurations.javadocElements) {
        if (version.toString().endsWith('-SNAPSHOT'))
            skip()
    }
    //build only artifacts from modules that contain code
    if (new File(projectDir, "src").isDirectory()) {
        println(new File(projectDir, "src"))
        publishing {
            publications {
                mavenJava(MavenPublication) {
                    from project.components.java
                }
            }
        }
    }
}

